# KDD

./: README.md  README.zh.md  compare_results.py
agent2/: README.md  pyproject.toml
agent2/competition_artifacts/: README.md
agent2/competition_artifacts/task_11/: semantic_artifact.json
agent2/competition_artifacts/task_145/: semantic_artifact.json
agent2/competition_artifacts/task_163/: semantic_artifact.json
agent2/competition_artifacts/task_173/: semantic_artifact.json
agent2/competition_artifacts/task_19/: semantic_artifact.json
agent2/configs/: competition.example.yaml
agent2/scripts/: build_competition_artifacts.py
agent2/src/data_agent_competition/: __init__.py
agent2/src/data_agent_competition/adapters/: __init__.py  asset_inventory.py  csv_adapter.py  db_adapter.py  doc_adapter.py  json_adapter.py  knowledge_adapter.py
agent2/src/data_agent_competition/agent/: __init__.py  controller.py  graph.py  replan_policy.py  state.py
agent2/src/data_agent_competition/artifacts/: __init__.py  schema.py
agent2/src/data_agent_competition/benchmark/: __init__.py  dataset.py
agent2/src/data_agent_competition/execution/: __init__.py  executor.py  physical_planner.py  python_fusion_backend.py  result_materializer.py  sql_backend.py  sql_subplanner.py  types.py
agent2/src/data_agent_competition/io/: __init__.py  context_filesystem.py
agent2/src/data_agent_competition/llm/: __init__.py  client.py
agent2/src/data_agent_competition/runtime/: __init__.py  app.py  bootstrap.py  config.py  result_writer.py  runner.py  task_loader.py
(+55 files in other folders)
